@@ -1,4 +1,4 @@
-# $Id: a.gwf,v 3.21 2000-10-25 02:34:54 ddr Exp $
+# $Id: a.gwf,v 3.22 2000-12-14 09:16:11 ddr Exp $
 # Parameters in "<body>" (background, color, etc)
 # Here is a palette of possibilities... test and choose one of them
 # if you want by removing the initial "#"
@@ -150,3 +150,17 @@ places_inverted=no
 # The template to be used can be changed by adding ";templ=foo" in the URL
 #
 #template=a,*
+
+# Customized variables.
+#
+# You can define any variable here, starting with "var_".
+#
+# They will be replaced in the displayed "notes", "sources", "comments"
+# and in the data base forum. If the variable name is "var_something",
+# it replaces all occurrences of "%something;" in these texts.
+#
+# Example. if you define here:
+#   var_who=Bond, James Bond
+# and if the notes is "My name is %who;.", the displayed text in the notes
+# will be:
+#   My name is Bond, James Bond.
