@@ -1,5 +1,5 @@
 (* camlp4r ./pa_lock.cmo ./pa_html.cmo *)
-(* $Id: util.ml,v 3.79 2000-11-09 12:40:06 ddr Exp $ *)
+(* $Id: util.ml,v 3.80 2000-12-14 09:16:11 ddr Exp $ *)
 (* Copyright (c) 2000 INRIA *)
 
 open Def;
@@ -918,13 +918,34 @@ value dangerous_tag s i =
   List.mem tag_id dangerous_tags_list
 ;
 
+value get_variable s i =
+  loop 0 i where rec loop len i =
+    if i == String.length s then (Buff.get len, i)
+    else
+      match s.[i] with
+      [ 'a'..'z' | 'A'..'Z' | '0'..'9' | '_' as c ->
+          loop (Buff.store len c) (i + 1)
+      | ';' -> (Buff.get len, i + 1)
+      | _ -> (Buff.get len, i) ]
+;
+
 type tag_type = [ In_a_href | In_norm | Out ];
 
 value copy_string_with_macros conf s =
   loop Out 0 where rec loop tt i =
     if i < String.length s then
-      if i + 1 < String.length s && s.[i] = '%' && s.[i+1] = 's' then
-        do Wserver.wprint "%s" (commd conf); return loop tt (i + 2)
+      if i + 1 < String.length s && s.[i] = '%' then
+        match s.[i+1] with
+        [ 's' ->
+            do Wserver.wprint "%s" (commd conf); return loop tt (i + 2)
+        | 'v' ->
+            let (k, j) = get_variable s (i + 2) in
+            let (v, i) =
+              try (List.assoc ("var_" ^ k) conf.base_env, j) with
+              [ Not_found -> ("%", i + 1) ]
+            in
+            do Wserver.wprint "%s" v; return loop tt i
+        | _ -> do Wserver.wprint "%%"; return loop tt (i + 1) ]
       else if s.[i] = '<' && dangerous_tag s (i + 1) then
         do Wserver.wprint "..."; return loop tt (i + 1)
       else
